--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/superhero
+spring.datasource.username=root
+spring.datasource.password=24121999Ra#
+
+superhero.repository.impl=superhero_DB
+server.error.whitelabel.enabled=false
+
+# Enable live reloading
+spring.devtools.livereload.enabled=true
+
+# Specify the folders to watch for changes
+spring.devtools.restart.additional-paths=src/main/resources/templates
+
 
